--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,10 @@
-@font-face {
-    font-family: 'iconitos';
-    src:  url('../fonts/iconos/icomoon.eot?snhoqy');
-    src:  url('../fonts/iconos/icomoon.eot?snhoqy#iefix') format('embedded-opentype'),
-      url('../fonts/iconos/icomoon.ttf?snhoqy') format('truetype'),
-      url('../fonts/iconos/icomoon.woff?snhoqy') format('woff'),
-      url('../fonts/iconos/icomoon.svg?snhoqy#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-}
-
-@font-face {
-    font-family: 'halter';
-    src: url('../fonts/halter/HALTER__.ttf');
-}
-
 * {
     margin: 0;
     padding: 0;
 }
 
 html {
-    font-family: 'halter';
+    font-family: 'finess';
 }
 
 body {
