--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    font-family: 'finess';
+    font-family: 'finess', sans-serif;
 }
 
 body {
@@ -14,17 +14,24 @@ body {
 
 .card {
     background: #7284aa;
-    width: fit-content;
+    width: 20%;
     margin: auto;
     padding: 30px;
     border-radius: 10px;
+    height: fit-content;
 }
 
-.card .iconos .sim::before {
-    font-family: 'iconitos';
-    content: '\e900';
-    font-size: 30px;
-    color: #ffd950;
+.card .iconos .sim {
+    background-size:contain;
+	background-position:center;
+	background-repeat:no-repeat;
+    background-image: url('data:image/svg+xml,%3Csvg version="1.1" xmlns="http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" xmlns%3Axlink="http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink" x="0px" y="0px" width="52.603px" height="27.424px" viewBox="22.897 64.288 52.603 27.424" enable-background="new 22.897 64.288 52.603 27.424" xml%3Aspace="preserve"%3E%3Crect x="72.407" y="79.211" fill="none" width="1.025" height="6.497"%2F%3E%3Cpath fill="%23444" d="M41.963%2C84.221v4.517c0%2C0.546-0.445%2C0.993-0.991%2C0.993H22.897v1.981h18.075h26.153H75.5v-1.981h-8.375 c-0.546%2C0-0.991-0.447-0.991-0.993v-4.517c0-0.546%2C0.445-0.989%2C0.991-0.989H75.5v-1.984c-1.865%2C0-8.375%2C0-8.375%2C0 c-0.546%2C0-0.991-0.444-0.991-0.99V75.74c0-0.546%2C0.445-0.989%2C0.991-0.989H75.5v-1.985h-8.375c-1.64%2C0-2.975%2C1.335-2.975%2C2.973v4.518 c0%2C0.764%2C0.302%2C1.455%2C0.776%2C1.981c-0.474%2C0.527-0.776%2C1.22-0.776%2C1.982v4.517c0%2C0.35%2C0.072%2C0.68%2C0.185%2C0.993H43.763 c0.111-0.313%2C0.182-0.642%2C0.182-0.993V84.22c0-0.761-0.297-1.455-0.771-1.982c0.474-0.526%2C0.771-1.216%2C0.771-1.981v-4.518 c0-0.762-0.297-1.453-0.771-1.981c0.474-0.527%2C0.771-1.217%2C0.771-1.982V67.26c0-0.349-0.071-0.678-0.182-0.99H75.5v-1.982H40.971 H22.897v1.982h18.075c0.546%2C0%2C0.991%2C0.444%2C0.991%2C0.99v4.516c0%2C0.546-0.445%2C0.991-0.991%2C0.991H22.897v1.984h18.075 c0.546%2C0%2C0.991%2C0.443%2C0.991%2C0.989v4.518c0%2C0.546-0.445%2C0.99-0.991%2C0.99H22.897v1.984h18.075 C41.518%2C83.232%2C41.963%2C83.675%2C41.963%2C84.221z"%2F%3E%3C%2Fsvg%3E');
+	background-size:55px;
+	width:55px;
+	height:40px;
+	margin:20px 0;
+	border-radius:8px;
+	background-color:#ffd950;
 }
 
 .card .iconos .wifi::after {
