Adding BBVA logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 
 html {
     font-family: 'finess', sans-serif;
+    text-shadow:-1px -1px 0px rgba(255,255,255,0.3), 1px 1px 0px rgba(0,0,0,0.8);
 }
 
 body {
@@ -40,7 +41,7 @@ body {
 .card .sim::after{
     font-family: 'iconitos';
     content: '\e91b';
-    font-size: 40px;
+    font-size: 35px;
     color: #FFFFFF;
     display: inline-block;
     transform: rotate(90deg);
@@ -49,7 +50,7 @@ body {
 
 .card .number h1 {
     color: #FFFFFF;
-    font-size: 16px;
+    font-size: 25px;
 }
 
 .card .number p {
@@ -87,13 +88,21 @@ body {
 
 .card .data img {
     height: auto;
-    width: 50px;
+    width: 70px;
     position: absolute;
     right: 0;
+    background: white;
 }
 
 .card .data h2 {
     text-transform: uppercase;
     color: #FFFFFF;
     font-size: 14px;
+}
+
+.card .logo{
+    font-family: sans-serif;
+    text-shadow: none;
+    color: white;
+    font-size: larger;
 }
