--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body {
     display: inline-block;
     transform: rotate(90deg);
     margin-left: 100%;
+    text-shadow: none;
 }
 
 .card .number h1 {
@@ -87,11 +88,12 @@ body {
 }
 
 .card .data img {
-    height: auto;
+    height: fit-content;
     width: 70px;
+    background: white;
     position: absolute;
     right: 0;
-    background: white;
+    padding: 2%;
 }
 
 .card .data h2 {
@@ -103,6 +105,6 @@ body {
 .card .logo{
     font-family: sans-serif;
     text-shadow: none;
-    color: white;
-    font-size: larger;
+    color: rgb(255, 255, 255, 0.8);
+    font-size: 25px;
 }
